crates/templates/tests/snapshots/version_test__impl.snap
---
source: crates/templates/tests/version_test.rs
description: With version
expression: output
---
version() {
  echo "0.0.1"
}
