crates/templates/tests/snapshots/version_test__render-2.snap
---
source: crates/templates/tests/version_test.rs
description: Without version
expression: output
---

