crates/templates/tests/snapshots/version_test__render.snap
---
source: crates/templates/tests/version_test.rs
description: With version
expression: output
---
version() {
  echo -n "0.0.1"
}
